--- a/voting-server/package.json
+++ b/voting-server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --recursive --require ./test/test_helper.js",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "start":"babel-node index.js"
   },
   "babel": {
     "presets": [
@@ -24,6 +25,8 @@
     "mocha": "^2.4.5"
   },
   "dependencies": {
-    "immutable": "^3.7.6"
+    "immutable": "^3.7.6",
+    "redux": "^3.3.1",
+    "socket.io": "^1.4.5"
   }
 }
