--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -34,6 +34,8 @@
     "react": "^0.14.7",
     "react-addons-pure-render-mixin": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^1.0.0-rc3"
+    "react-redux": "^4.4.1",
+    "react-router": "^1.0.0-rc3",
+    "redux": "^3.3.1"
   }
 }
