--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.1",
     "react-router": "^1.0.0-rc3",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "socket.io-client": "^1.4.5"
   }
 }
